--- a/aac.cabal
+++ b/aac.cabal
@@ -31,7 +31,8 @@ library
   hs-source-dirs:
       src
   build-depends:
-      base >=4.7 && <5
+      JuicyPixels
+    , base >=4.7 && <5
   default-language: Haskell2010
 
 executable aac-exe
@@ -42,8 +43,10 @@ executable aac-exe
       app
   ghc-options: -Wall -threaded -rtsopts -with-rtsopts=-N
   build-depends:
-      aac
+      JuicyPixels
+    , aac
     , base >=4.7 && <5
+    , directory
   default-language: Haskell2010
 
 test-suite aac-test
@@ -55,6 +58,7 @@ test-suite aac-test
       test
   ghc-options: -threaded -rtsopts -with-rtsopts=-N
   build-depends:
-      aac
+      JuicyPixels
+    , aac
     , base >=4.7 && <5
   default-language: Haskell2010
