--- a/package.yaml
+++ b/package.yaml
@@ -20,6 +20,7 @@ extra-source-files:
 description:         Please see the README on GitHub at <https://github.com/githubuser/aac#readme>
 
 dependencies:
+- JuicyPixels
 - base >= 4.7 && < 5
 
 library:
@@ -35,7 +36,10 @@ executables:
     - -rtsopts
     - -with-rtsopts=-N
     dependencies:
+    - JuicyPixels
     - aac
+    - directory
+    
 
 tests:
   aac-test:
