--- a/aac.cabal
+++ b/aac.cabal
@@ -32,6 +32,7 @@ library
       src
   build-depends:
       JuicyPixels
+    , JuicyPixels-repa
     , base >=4.7 && <5
   default-language: Haskell2010
 
@@ -44,6 +45,7 @@ executable aac-exe
   ghc-options: -Wall -threaded -rtsopts -with-rtsopts=-N
   build-depends:
       JuicyPixels
+    , JuicyPixels-repa
     , aac
     , base >=4.7 && <5
     , directory
@@ -59,6 +61,7 @@ test-suite aac-test
   ghc-options: -threaded -rtsopts -with-rtsopts=-N
   build-depends:
       JuicyPixels
+    , JuicyPixels-repa
     , aac
     , base >=4.7 && <5
   default-language: Haskell2010
