--- a/aac.cabal
+++ b/aac.cabal
@@ -34,7 +34,10 @@ library
       JuicyPixels
     , JuicyPixels-repa
     , base >=4.7 && <5
+    , bytestring
     , repa
+    , split
+    , text
   default-language: Haskell2010
 
 executable aac-exe
@@ -49,8 +52,11 @@ executable aac-exe
     , JuicyPixels-repa
     , aac
     , base >=4.7 && <5
+    , bytestring
     , directory
     , repa
+    , split
+    , text
   default-language: Haskell2010
 
 test-suite aac-test
@@ -60,11 +66,14 @@ test-suite aac-test
       Paths_aac
   hs-source-dirs:
       test
-  ghc-options: -threaded -rtsopts -with-rtsopts=-N
+  ghc-options: -Wall -threaded -rtsopts -with-rtsopts=-N
   build-depends:
       JuicyPixels
     , JuicyPixels-repa
     , aac
     , base >=4.7 && <5
+    , bytestring
     , repa
+    , split
+    , text
   default-language: Haskell2010
