--- a/package.yaml
+++ b/package.yaml
@@ -23,6 +23,9 @@ dependencies:
 - repa
 - JuicyPixels
 - JuicyPixels-repa
+- bytestring
+- text
+- split
 - base >= 4.7 && < 5
 
 library:
@@ -41,6 +44,9 @@ executables:
     - repa
     - JuicyPixels
     - JuicyPixels-repa
+    - bytestring
+    - text
+    - split
     - aac
     - directory
     
@@ -50,6 +56,7 @@ tests:
     main:                Spec.hs
     source-dirs:         test
     ghc-options:
+    - -Wall
     - -threaded
     - -rtsopts
     - -with-rtsopts=-N
