--- a/aac.cabal
+++ b/aac.cabal
@@ -66,7 +66,7 @@ test-suite aac-test
       Paths_aac
   hs-source-dirs:
       test
-  ghc-options: -Wall -threaded -rtsopts -with-rtsopts=-N
+  ghc-options: -Wall -threaded -rtsopts -eventlog -with-rtsopts=-N
   build-depends:
       JuicyPixels
     , JuicyPixels-repa
